--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "docker",
     "container"
   ],
-  "version": "0.17.1",
+  "version": "0.17.2-isight",
   "license": "Artistic License 2.0",
   "author": "Peter Elger (http://nearform.com/)",
   "contributors": [
